# elric-rs

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml  release-please.yml  test.yml
src/: fixed_string.rs  loader.rs  logging.rs  main.rs  substreams.rs  substreams_stream.rs  table_info.rs
