[package]
name = "substreams-sink-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-stream = "0.3"
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
tokio = { version = "1.27", features = ["time", "sync", "macros", "test-util", "rt-multi-thread", "parking_lot"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-retry = "0.3"
tonic = { version = "0.9.2", features = ["tls-roots"] }
prost = "0.11"
prost-types = "0.11"
thiserror = "1"
substreams-database-change = "1.2.1"
clickhouse = { version = "0.11.5", features = ["time"] }
hyper-tls = "0.5.0"
hyper = "0.14.27"
serde = { version = "1.0.171", features = ["derive"] }
primitive-types = "0.12.1"
chrono = { version = "0.4.26", features = ["serde"] }
time = "0.3.25"
strum = "0.25"
strum_macros = "0.25"


[patch.crates-io]
clickhouse = { git = "https://github.com/semiotic-ai/clickhouse.rs", branch = "dynamic-insert" }
